cd/backend-api-k8s-yaml/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: backend-container
        image: docker.io/1wolfalone1/mealsync-api@sha256:cad8e90e7f0083841e00bbec7687693d2150bf4fb50af93c7a5f444809a0d038
        imagePullPolicy: Always  # Ensures the image is always pulled from the registry
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: firebase-secret
          mountPath: /tmp/firebase_credentials.json
          subPath: FIREBASE_JSON   # Specific key in the Secret
          readOnly: true
      volumes:
      - name: firebase-secret
        secret:
          secretName: backend-firebase-secrets
