cd/backend-api-k8s-yaml/base/service-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - protocol: TCP
    name: "80"
    port: 80      # Service port (inside the cluster)
    targetPort: 8080 # Container port
  - protocol: TCP
    name: "443"
    port: 443 # Service port (inside the cluster)
    targetPort: 8080 # Container port
  sessionAffinity: None
