cd/backend-api-k8s-yaml/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: api.mealsync.org
    external-dns.alpha.kubernetes.io/target: eaed81dc-037a-44be-9931-a5ae3d12bcea.cfargotunnel.com
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: backend-api
spec:
  rules:
    - host: api.mealsync.org
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /
            pathType: Prefix
